Adjust the layout to landscape mode mobile

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -248,6 +248,9 @@ header{
         height: max-content;
         padding-bottom: 30px;
     }
+    .como-funciona{
+        padding: 20px 0;
+    }
 }
 /*  @media(max-width:801px) and (min-width:400px){
     body{
