--- a/src/css/style.css
+++ b/src/css/style.css
@@ -208,10 +208,25 @@ header .toogle-btn {
   }
 }
 @media (orientation: landscape) {
+  .hero {
+    padding-top: 0;
+  }
   .cover {
     height: -moz-max-content;
     height: max-content;
     padding-bottom: 30px;
+  }
+  .como-funciona {
+    padding: 20px 0;
+  }
+  .como-funciona .explains .image {
+    width: 35%;
+  }
+  .como-funciona .explains .text-explains {
+    width: 65%;
+  }
+  .como-funciona .explains .text-explains p {
+    font-size: 20px;
   }
 }
 /*  @media(max-width:801px) and (min-width:400px){
