Include the Readme file

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -30,7 +30,7 @@ a{
 
 
 }
-
+ //  cover design
 .cover{
     background-color: $backgroundColor;
     min-height: 100vh;
@@ -222,7 +222,7 @@ header{
             .text-explains{
                 width: 100%;
                 p{
-                    font-size: 12px;
+                    font-size: 14px;
                 }
             }
             p{
