--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,6 +28,60 @@ li a:hover {
   background-color: #D1D5DB;
   min-height: 100vh;
 }
+.cover .hero {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  align-items: center;
+  height: calc(100% - 70px);
+  padding-top: 86px;
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+}
+.cover .hero h1 {
+  font-size: 56px;
+  font-weight: bold;
+}
+.cover .hero p {
+  font-size: 18px;
+  font-weight: 300;
+  color: #6B7280;
+  line-height: 2rem;
+}
+.cover .hero form {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+.cover .hero form .subsc {
+  display: flex;
+  flex-direction: row;
+}
+.cover .hero form input[type=email] {
+  border: 1px solid #CCCCCC;
+  border-radius: 8px;
+  width: 280px;
+  height: 40px;
+  outline: none;
+  padding-left: 8px;
+}
+.cover .hero form button {
+  background-color: #000;
+  border-radius: 8px;
+  height: 40px;
+  color: #ffffff;
+  padding: 8px;
+  font-size: 0.85rem;
+  margin-left: 0.6rem;
+  cursor: pointer;
+}
+.cover .hero form p {
+  font-size: 0.65rem;
+  color: #6B7280;
+}
 
 header {
   padding: 20px 2.8rem;
@@ -51,61 +105,6 @@ header .toogle-btn {
   display: none;
   cursor: pointer;
   font-size: 1.5rem;
-}
-
-.hero {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-  align-items: center;
-  height: calc(100% - 70px);
-  padding-top: 86px;
-  width: 55%;
-  margin: 0 auto;
-  text-align: center;
-}
-.hero h1 {
-  font-size: 56px;
-  font-weight: bold;
-}
-.hero p {
-  font-size: 18px;
-  font-weight: 300;
-  color: #6B7280;
-  line-height: 2rem;
-}
-.hero form {
-  margin-top: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-}
-.hero form .subsc {
-  display: flex;
-  flex-direction: row;
-}
-.hero form input[type=email] {
-  border: 1px solid #CCCCCC;
-  border-radius: 8px;
-  width: 280px;
-  height: 40px;
-  outline: none;
-  padding-left: 8px;
-}
-.hero form button {
-  background-color: #000;
-  border-radius: 8px;
-  height: 40px;
-  color: #ffffff;
-  padding: 8px;
-  font-size: 0.85rem;
-  margin-left: 0.6rem;
-  cursor: pointer;
-}
-.hero form p {
-  font-size: 0.65rem;
-  color: #6B7280;
 }
 
 .como-funciona {
@@ -155,33 +154,60 @@ header .toogle-btn {
   font-size: 20px;
 }
 
+.preco {
+  display: flex;
+  min-height: 100vh;
+  background-color: #D1D5DB;
+}
+.preco .info {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  width: 60%;
+  margin: 0 auto;
+  padding: 56px 0;
+  gap: 2rem;
+  text-align: center;
+}
+.preco .info h1 {
+  font-size: 56px;
+  font-weight: bold;
+}
+.preco .info p {
+  font-size: 18px;
+  font-weight: 300;
+  color: #6B7280;
+  line-height: 2rem;
+}
+
 @media (max-width: 700px) {
-  .hero {
-    width: 80%;
+  .cover .hero {
+    width: 90%;
+  }
+  .preco .info {
+    width: 90%;
   }
   .explains {
     margin-bottom: 32px;
   }
 }
 @media (max-width: 530px) {
-  .hero {
-    width: 80%;
-  }
-  .hero form .subsc {
+  .cover .hero form .subsc {
     flex-direction: column;
     width: 100%;
     gap: 0.6rem;
   }
-  .hero form input[type=email] {
+  .cover .hero form input[type=email] {
     width: 100%;
   }
-  .hero form button {
+  .cover .hero form button {
     margin-left: unset;
   }
-  .hero h1 {
+  .cover .hero h1 {
     font-size: 34px;
   }
-  .hero p {
+  .cover .hero p {
     line-height: 1.5rem;
   }
   .como-funciona h1 {
@@ -200,6 +226,15 @@ header .toogle-btn {
   .como-funciona .explains p {
     justify-content: space-between;
   }
+  .preco .info img {
+    width: 80%;
+  }
+  .preco .info h1 {
+    font-size: 34px;
+  }
+  .preco .info p {
+    line-height: 1.5rem;
+  }
   .nav-bar .links {
     display: none;
   }
@@ -207,14 +242,14 @@ header .toogle-btn {
     display: block;
   }
 }
-@media (orientation: landscape) {
-  .hero {
-    padding-top: 0;
-  }
+@media (orientation: landscape) and (max-height: 400px) {
   .cover {
     height: -moz-max-content;
     height: max-content;
     padding-bottom: 30px;
+  }
+  .cover .hero {
+    padding-top: 0;
   }
   .como-funciona {
     padding: 20px 0;
