--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -3,7 +3,30 @@
 $headings: #000;
 $text: #6B7280;
 $border: #CCCCCC;
-$backgroundColor:#D1D5DB;;
+$backgroundColor:#D1D5DB;
+$width: 60%;
+
+@mixin style-text {
+    h1{
+       font-size: 56px;
+       font-weight: bold;
+    }
+    p{
+        font-size: 18px;
+        font-weight: 300;
+        color: $text;
+        line-height: 2rem;
+    }
+}
+@mixin style-text-resp {
+    h1{
+       font-size: 34px;;
+    }
+    p{
+        line-height: 1.5rem;
+    }
+}
+
 
 *{
     margin: 0;
@@ -34,36 +57,8 @@ a{
 .cover{
     background-color: $backgroundColor;
     min-height: 100vh;
-}
-// header design
-header{
-    padding: 20px 2.8rem;
-    display: flex;
 
-    .logo{
-        cursor: pointer;
-    }
-
-    .nav-bar{
-        display: flex;
-        height: 40px;
-        width: 100%;
-        justify-content: space-between;
-        align-items: center;
-        // margin-top: 30px;
-    }
-    ul{
-        display: flex;
-        gap: 2rem;
-    }
-    .toogle-btn{
-        display: none;
-        cursor: pointer;
-        font-size: 1.5rem;
-    }
-}
-
-// hero design
+    // hero design
 .hero{
     display: flex;
     flex-direction: column;
@@ -72,21 +67,13 @@ header{
     align-items: center;
     height: calc(100% - 70px);
     padding-top: 86px;
-    width: 55%;
+    width: $width;
     margin: 0 auto;
     text-align: center;
 
-    h1{
-        font-size: 56px;
-        font-weight: bold;
-    }
+    @include style-text();
     
-    p{
-        font-size: 18px;
-        font-weight: 300;
-        color: $text;
-        line-height: 2rem;
-    }
+   
     form{
         margin-top: 1rem;
         display: flex;
@@ -124,6 +111,35 @@ header{
     }
 
 }
+}
+// header design
+header{
+    padding: 20px 2.8rem;
+    display: flex;
+
+    .logo{
+        cursor: pointer;
+    }
+
+    .nav-bar{
+        display: flex;
+        height: 40px;
+        width: 100%;
+        justify-content: space-between;
+        align-items: center;
+        // margin-top: 30px;
+    }
+    ul{
+        display: flex;
+        gap: 2rem;
+    }
+    .toogle-btn{
+        display: none;
+        cursor: pointer;
+        font-size: 1.5rem;
+    }
+}
+
 .como-funciona{
     display: flex;
     align-items: center;
@@ -139,7 +155,7 @@ header{
         padding: 44px 0;
         // margin-top: 5px;
 
-    }
+    } 
     .explains{
         display: flex;
         align-items: center;
@@ -179,36 +195,60 @@ header{
     }
    
 }
+.preco{
+    display: flex;
+    min-height: 100vh;
+    background-color: $backgroundColor;
+
+    .info{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        width: 60%;
+        margin: 0 auto;
+        padding: 56px 0;
+        gap: 2rem;
+        text-align:center;
+
+        @include style-text();
+
+    }
+
+}
 
 @media(max-width:700px){
-    .hero{
-        width: 80%;
+    .cover{
+        .hero{
+            width: 90%;
+        }
     }
+    .preco {
+        .info{
+            width: 90%;}
+    }
+        
     .explains{
         margin-bottom: 32px;
     }
   
 }
 @media(max-width:530px){
-    .hero{
-        width: 80%;
-        form{
-            .subsc{
-                flex-direction: column;
-                width: 100%;
-                gap: 0.6rem;
+    .cover{
+        .hero{
+            form{
+                .subsc{
+                    flex-direction: column;
+                    width: 100%;
+                    gap: 0.6rem;
+                }
+                input[type=email]{
+                    width: 100%;
+                }button{
+                    margin-left: unset;
+                }
             }
-            input[type=email]{
-                width: 100%;
-            }button{
-                margin-left: unset;
-            }
-        }
-        h1{
-            font-size: 34px;
-        }
-        p{
-            line-height: 1.5rem;
+            @include style-text-resp()
         }
     }
     .como-funciona{
@@ -230,6 +270,14 @@ header{
             }
         }
     }
+    .preco{
+        .info{
+            img{
+                width: 80%;
+            }
+            @include style-text-resp()
+        }
+    }
    
     .nav-bar{
         .links{
@@ -242,14 +290,16 @@ header{
  
   
 }
-@media(orientation: landscape){
-    .hero{
-        padding-top: 0;
-    }
+@media(orientation: landscape) and (max-height:400px){
+   
     
     .cover{
         height: max-content;
         padding-bottom: 30px;
+
+        .hero{
+            padding-top: 0;
+        }
     }
     .como-funciona{
         padding: 20px 0;
