--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,4 @@
-⅚@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -31,7 +31,9 @@ li a#login {
 
 .cover {
   background-image: url("../images/background.png");
-  background-color: #444;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   min-height: 100vh;
 }
 .cover .hero {
@@ -164,6 +166,9 @@ header .toogle-btn {
   display: flex;
   min-height: 100vh;
   background-image: url("../images/background.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .preco .info {
   display: flex;
@@ -187,6 +192,55 @@ header .toogle-btn {
   line-height: 2rem;
 }
 
+.final {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+  gap: 2rem;
+}
+.final h1 {
+  font-size: 56px;
+  font-weight: bold;
+}
+.final p {
+  font-size: 18px;
+  font-weight: 300;
+  color: #6B7280;
+  line-height: 2rem;
+}
+.final .cta button {
+  background-color: #000;
+  border-radius: 8px;
+  height: 40px;
+  color: #ffffff;
+  padding: 8px;
+  font-size: 0.85rem;
+  margin-left: 0.6rem;
+  width: 320px;
+  cursor: pointer;
+}
+.final .cta p {
+  font-size: 0.65rem;
+  color: #6B7280;
+  text-align: center;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 20px 0;
+}
+footer p {
+  font-size: 12px;
+  font-weight: 300;
+  color: #6B7280;
+}
+
 @media (max-width: 700px) {
   .cover .hero {
     width: 90%;
@@ -198,6 +252,9 @@ header .toogle-btn {
     margin-bottom: 32px;
   }
 }
+/* .final{
+    @include style-text
+} */
 @media (max-width: 530px) {
   .cover .hero form .subsc {
     flex-direction: column;
@@ -246,6 +303,9 @@ header .toogle-btn {
   }
   .nav-bar .toogle-btn {
     display: block;
+  }
+  .final h1 {
+    font-size: 34px;
   }
 }
 @media (orientation: landscape) and (max-height: 400px) {
