--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -351,14 +351,13 @@ footer{
         }
     }
     .final{
+        padding: 0 28px;
+        @include style-text-resp();
+        
         h1{
             font-size: 34px;
         }
     }
-    .final{
-        padding: 0 8px;
-    }
- 
   
 }
 @media(orientation: landscape) and (max-height:400px){
